<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Plenome POS</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_pwd">Enter password</string>
    <string name="email">Email id</string>
    <string name="date">Date</string>
    <string name="aadhaar_no">AADHAAR Number</string>
    <string name="aadhaar_otp">AADHAAR OTP</string>
    <string name="abha_otp">ABHA OTP</string>
    <string name="aadhaar_hint">0000 0000 0000</string>
    <string name="abha_hint">00-0000-0000-0000</string>
    <string name="pwd">Password</string>
    <string name="signin">Sign in</string>
    <string name="verified">Verified</string>
    <string name="generate_prescription">Generate Prescription</string>
    <string name="getOtp">Get otp</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="slNo">S. No</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="speciality">Speciality</string>
    <string name="token_no">Token Number</string>
    <string name="forgotPwd">Forgot Password?</string>
    <string name="rememberPwd">Remember me</string>
    <string name="plenome">Plenome</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="mountHospital">Mount Multispeciality Hospitals</string>
    <string name="plenome_hospitals">Plenome Hospitals</string>
    <string name="welcome_name">Welcome, name</string>
    <string name="good_morning">Good Morning!</string>
    <string name="appointmentBook">Book Appointment</string>
    <string name="trackDetails">Tracking Details</string>
    <string name="trackStatus">Status Tracking</string>
    <string name="add_patient">Add new patient</string>
    <string name="abha">ABHA</string>
    <string name="suggested">Suggested</string>
    <string name="abha_address">ABHA Address</string>
    <string name="abha_address_new">ABHA Address : </string>
    <string name="abha_verified">ABHA address verified successfully</string>
    <string name="abha_no_linked">ABHA number linked successfully</string>
    <string name="plus_new">+ New</string>
    <string name="vitals">Vitals</string>
    <string name="create_abha">Create ABHA</string>
    <string name="emr">EMR</string>
    <string name="temp">Temperature</string>
    <string name="billing">Billing</string>
    <string name="billingHistory">Billing History</string>
    <string name="pendingBill">Pending Bills</string>
    <string name="password_reset">Password reset</string>
    <string name="change_pwd">Change Password</string>
    <string name="new_pwd">Enter New Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="consultant">Consultant</string>
    <string name="req_on">Requested on</string>
    <string name="granted_on">Granted on</string>
    <string name="expire_on">Expire on</string>
    <string name="enter_your_email_address">Enter your email address that associated with this account</string>
    <string name="next">Next</string>
    <string name="confirmSlot">Confirm Slot</string>
    <string name="update">Update</string>
    <string name="mailSent">Your credentials has sent to your email. Please check </string>
    <string name="pwd_changed_success">Password Changed Successfully</string>
    <string name="select_user">Select User Type</string>
    <string name="select_date">Select Date</string>
    <string name="select_abha_addr">Select ABHA Address</string>
    <string name="comm_info">Communication info</string>
    <string name="select_otp_option">Select an Option to receive OTP</string>
    <string name="scanning_for">Scanning for Device...</string>
    <string name="connecting">Connecting..</string>
    <string name="connected">Connected</string>
    <string name="sel_string">Select existing ABHA address to continue or Create new ABHA address</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="doctor">Doctor</string>
    <string name="edit">Edit</string>
    <string name="txt_history">History</string>
    <string name="noDataFound">Looks like user do not have any records</string>
    <string name="changeStatus">Change the status</string>
    <string name="noRecFound">No records found</string>
    <string name="noSlot">No slots available!</string>
    <string name="approveConfirm">Are you sure want to Approve?</string>
    <string name="inProcessConfirm">Are you sure want to mark as In process?</string>
    <string name="completedConfirm">Are you sure want to mark as completed?</string>
    <string name="insuranceNo">Insurance Number</string>
    <string name="insuranceValidity">Insurance validity</string>
    <string name="discountRate">Discount rate</string>
    <string name="discountPercent">Discount Percentage</string>
    <string name="primaryNo">Primary Number</string>
    <string name="primaryNoMan">Primary Number<font color='#FE3232'>*</font></string>
    <string name="permenantAddress">Permanent Address</string>
    <string name="permenantAddressMan">Permanent Address</string>
    <string name="communicationAddress">Communication Address</string>
    <string name="emergencyNo">Emergency Number</string>
    <string name="requested">Requested</string>
    <string name="reserved">Reserved</string>
    <string name="approved">Approved</string>
    <string name="ongoing">Ongoing</string>
    <string name="payment">Payment</string>
    <string name="consult_doctor">Consult Doctor</string>
    <string name="nurse">Nurse</string>
    <string name="receptionist">Receptionist</string>
    <string name="login_as_user">Login as User role Name</string>
    <string name="password_det">Password must contain 8 characters Example \u00e2\u0080\u009cA@12asmn</string>
    <string name="appointment">Appointments</string>
    <string name="appointmentNo">Appointment No</string>
    <string name="paymentDate">Payment Date</string>
    <string name="subTotal">Sub Total</string>
    <string name="CGST">CGST</string>
    <string name="SGST">SGST</string>
    <string name="appointment_status">Appointment Status</string>
    <string name="consultation_process">Consultation Process</string>
    <string name="upcomingConsultation">Upcoming Consultation</string>
    <string name="todayConsultation">Today\'s Consultation</string>
    <string name="consents">Consents</string>
    <string name="appointmentInfo">Appointment Info</string>
    <string name="prescription">Prescription</string>
    <string name="preview">Preview</string>
    <string name="medicine">Medicine</string>
    <string name="patient_prescription">Patient\'s Prescription</string>
    <string name="clinicalNotes">Clinical Notes</string>
    <string name="appointmentDate">Appointment Date</string>
    <string name="appointmentDateTime">Appointment Date(Time)</string>
    <string name="history">History</string>
    <string name="time">Time</string>
    <string name="coming_soon">
Coming Soon
</string>
    <string name="duration">Duration</string>
    <string name="dose">Dose</string>
    <string name="profile">Profile</string>
    <string name="all">All</string>
    <string name="ops">Out Patients</string>
    <string name="appts">Appointments</string>
    <string name="invoice">Invoice</string>
    <string name="thanku">Thank You</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="email_ex">jen.wilson@example.com</string>
    <string name="logout">Log out</string>
    <string name="total">Total</string>
    <string name="totalRevenue">Total Revenue</string>
    <string name="totalPending">Total Pending</string>
    <string name="completed">Completed</string>
    <string name="totalcount">Total Count</string>
    <string name="wip">WIP</string>
    <string name="not_attend">Not attend</string>
    <string name="ayushman_bh">Ayushman Bharat Health Account</string>
    <string name="abha_health">ABHA health ID is a way to access and share health records digitally. Digital ABHA health ID is available for all. You can able create health id and ABHA address using AADHAAR number. Using mobile number only ABHA address can be created</string>
    <string name="create_abha1">Create ABHA to access and share your health records</string>
    <string name="aadharNo">AADHAAR Number</string>
    <string name="i_provide_m">I provide my consent to Aayush to share my details with the National Health Authority for the purpose of creating my Health Account</string>
    <string name="agree_to">Agree to the</string>
    <string name="verifying_otp">Verifying OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_sent">An OTP has been sent to mobile number</string>
    <string name="resend_otp_enable">Didn’t receive OTP? Resend OTP in</string>
    <string name="verify">Verify</string>
    <string name="skip">Skip for now</string>
    <string name="agree">Agree to share profile details with NHA for creating ABHA address</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="gender_man">Gender<font color='#FE3232'>*</font></string>
    <string name="mobileNo">Mobile Number</string>
    <string name="abhaNo">ABHA Number</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="hosp_address">Healthcare Technology Innovation centre (HTIC) 5th floor, Block C IITM Research Park, Kanagam road, Taramani, Chennai, Tamil Nadu - 600113</string>
    <string name="phone">Phone</string>
    <string name="abha_no">ABHA Number</string>
    <string name="abha_no_new">ABHA Number : </string>
    <string name="create_abha_no">Create ABHA Number</string>
    <string name="done">Done</string>
    <string name="select">Select Patient id/Phone no/ABHA No</string>
    <string name="patient_id">Patient ID</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="selTime">Select Time</string>
    <string name="morning">Morning</string>
    <string name="b4Meal">Before Meal</string>
    <string name="scribble">Scribble</string>
    <string name="text">Text</string>
    <string name="voice">Voice</string>
    <string name="afterMeal">After Meal</string>
    <string name="nine_am_11_am">9 AM to 11 AM</string>
    <string name="eleven_am_1_pm">11 AM to 1 PM</string>
    <string name="two_pm_4_pm">2 PM to 3 PM</string>
    <string name="three_pm_4_pm">3 PM to 4 PM</string>
    <string name="five_pm_7_pm">5 PM to 7 PM</string>
    <string name="seven_pm_9_pm">7 PM to 9 PM</string>
    <string name="noon">Afternoon</string>
    <string name="uploadPhoto">Upload Photo using</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="patient_info">Patient Info</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="patient_profile_space">Patients Profile</string>
    <string name="past_visits">Past Visits</string>
    <string name="patient_name">Patient Name</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="general_info">General Information</string>
    <string name="patient_presc">Patient\'s Prescription</string>
    <string name="medicine_form">
Medicine Form, Dosage, Timings, Before/After Food?
</string>
    <string name="tablet">Tablet</string>
    <string name="consumption_tablet">Consumption Tablet</string>
    <string name="syrup">Syrup</string>
    <string name="ointment">Ointment</string>
    <string name="patName">Patient Name : </string>
    <string name="slDate">Slot Date : </string>
    <string name="slTime">Slot Time : </string>
</resources>